added haskell cfg